Fixed pencil off center in stage participant grid

--- a/styles/controllers/grid/stageParticipant.less
+++ b/styles/controllers/grid/stageParticipant.less
@@ -35,10 +35,6 @@ div#stageParticipantGridContainer {
 		height: 25px;
 	}
 	
-	div.pkp_controllers_grid .row_actions a:before {
-		margin-top: 1px;
-	}
-	
 	div.pkp_controllers_grid div.actions {
 		margin:0px;
 	}
